--- a/index.html
+++ b/index.html
@@ -1,109 +1,26 @@
+<html>
 <head>
-	<title>Tugas pemograman web</title>
+<title>Teruntuk pacar ako </title>
+<style type="text/css">
+body{
+color: black;
+background: white;
+font-family: Bradley Hand ITC;
+font-size: 20;
+}
+</style>
 </head>
+<h1>Haiii sayanggg akoooo</h1>
+<p>Papaww mauu minta maaf nii samaa kamuu kalo papaw nyebelin akhir akhir udah buat kamu betee garagara papaww,emangg sii papaw nyebelinnn tapi papaw sayangggg bangett sama kamuuu kalaupun nyebelin tetep ajaa otak mah pikirannya kamuu teruss kamu teruss, kamu mau maafinn papaww gaa semogaa kamu maafin papaww yaaaaa </p>
+<p> Ohiyaaa ntarr kitaa jumatt mainn yaaa kangenn beutt dahhh kagak booong sumpahh kitaa nge date lagiiii kemarin first date kita gagal tapi semoga jumatt ga gagall yaaa biiii mauu gaa ?
+<div align="right">
+	<p>-penuh cinta pawpaw</p>
+	<td rowspan=8><img src="sayang.jpeg"width="350px" height="197px"></td>
+</div>
+<div align="center">
+<td rowspan=8><img src="love 2.png"width="350px" height="197px"></td>
+<div align="left">
+	<td rowspan=8><img src="sayang 2.jpeg"width="350px" height="197px"></td>
 
-<body bgcolor="#F8F8FF">
-	<div align="center">
-		<p><b><font size="5"> IDENTITAS DIRI </b> </font>
-			<hr color="black" size =3>
-<b>
-<font size="5"> PERSONAL DETAILS </font></b>
-	<table width="800px"><font color="white"></font>
-<tbody>
-
-	<tr>
-	<h2>
-		<td width="200" height="20"><b>NAMA </b></td>
- <td width="1%">:</td>
-
-      <td>Mochammad Fauzan</td>
-
-      <td rowspan="4"><img src="Apow.png" title="1" height="100px" width="75px"></td>
-
-    </tr>
-
-    <tr>
-
-      <td>Place, Date of Birth </td>
-
-      <td>:</td>
-
-      <td>Garut , 5 Maret 2002 </td>
-
-    </tr>
-
-    <tr>
-
-      <td>Address</td>
-
-      <td>:</td>
-
-      <td>Jln. Kiara Asri III No 14</td>
-
-    </tr>
-	<tr>
-
-      <td>E-mail</td>
-
-      <td>:</td>
-
-      <td>arman@gmail.com</td>
-
-    </tr>
-
-  </tbody>
-
-</table>
-
-<h2>
-
-Educational Background</h2>
-
-<table width="800px">
-
-  <tbody>
-
-    <tr>
-
-      <td width="25%">2015-Present</td>
-
-      <td width="1%">:</td>
-
-      <td>Mahasiswa di TANRI ABENG UNIVERSITY</td>
-
-    </tr>
-
-    <tr>
-
-      <td>2013-2015</td>
-
-      <td>:</td>
-
-      <td>SMK NEGERI 1 PALANGGA</td>
-
-    </tr>
-
-    <tr>
-
-      <td>2010-2013</td>
-
-      <td>:</td>
-
-      <td>SMP NEGERI 1 TINGGIMONCONG</td>
-
-      <tr>
-
-        <td>2004-2010</td>
-
-        <td>:</td>
-
-        <td>SD INPRES GANTARANG</td>
-
-      </tr>
-
-   </tbody>
-
-    </body>
-
-    </html>
-   
+</html>
+</body>	
