--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ font-size: 20;
 	<td rowspan=8><img src="sayang.jpeg"width="350px" height="197px"></td>
 </div>
 <div align="center">
-<td rowspan=8><img src="love 2.png"width="350px" height="197px"></td>
+![love 2](https://user-images.githubusercontent.com/75299010/111151443-0e009180-85c2-11eb-8eb2-24aad84ade0b.png)width="350px" height="197px"></td>
 <div align="left">
 	<td rowspan=8><img src="sayang 2.jpeg"width="350px" height="197px"></td>
 
