--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ font-size: 20;
 </head>
 <h1>Haiii sayanggg akoooo</h1>
 <p>Papaww mauu minta maaf nii samaa kamuu kalo papaw nyebelin akhir akhir udah buat kamu betee garagara papaww,emangg sii papaw nyebelinnn tapi papaw sayangggg bangett sama kamuuu kalaupun nyebelin tetep ajaa otak mah pikirannya kamuu teruss kamu teruss, kamu mau maafinn papaww gaa semogaa kamu maafin papaww yaaaaa </p>
-<p> Ohiyaaa ntarr kitaa jumatt mainn yaaa kangenn beutt dahhh kagak booong sumpahh kitaa nge date lagiiii kemarin first date kita gagal tapi semoga jumatt ga gagall yaaa biiii mauu gaa ?
+<p> ntarr jumatt kitaaa temuu yaaa byyy kangennn bangett tauuu gaa ihhhh bibyyy maaaa , papaww pengen peyukk bibyyyy banget dah lama nggaa pgn nyekek jugaa kalo bibyy nya nyebelinnnnn , huwaa udahh yaaa love uu byyyy aku sayangg kamuuuuu gabole dan jangan pernah pergii yaaa
 <div align="right">
 	<p>-penuh cinta pawpaw</p>
 	<td rowspan=8><img src="sayang.jpeg"width="350px" height="197px"></td>
